vuejs/vuejs-tests/testData/highlighting/pseudoSelectors.vue
<style lang="scss">
    div::<weak_warning descr="Deprecated symbol used, consult docs for better alternative">v-deep</weak_warning>::<error descr="Unknown pseudo selector 'v-incorrect'">v-incorrect</error> {}
</style  >